--- a/k8s/01-serviceaccount.yaml
+++ b/k8s/01-serviceaccount.yaml
@@ -7,28 +7,29 @@ metadata:
     app: go-microservice
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
-  namespace: go-service-obs
-  name: go-service-role
+  name: go-service-clusterrole
 rules:
-- apiGroups: [""]
-  resources: ["pods", "services", "endpoints"]
-  verbs: ["get", "list", "watch"]
-- apiGroups: ["apps"]
-  resources: ["deployments", "replicasets"]
-  verbs: ["get", "list", "watch"]
+  - apiGroups: [""]
+    resources: ["pods", "services", "endpoints", "nodes"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: ["apps"]
+    resources: ["deployments", "replicasets"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: ["extensions", "networking.k8s.io"]
+    resources: ["ingresses"]
+    verbs: ["get", "list", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
-  name: go-service-rolebinding
-  namespace: go-service-obs
+  name: go-service-clusterrolebinding
 subjects:
-- kind: ServiceAccount
-  name: go-service-sa
-  namespace: go-service-obs
+  - kind: ServiceAccount
+    name: go-service-sa
+    namespace: go-service-obs
 roleRef:
-  kind: Role
-  name: go-service-role
+  kind: ClusterRole
+  name: go-service-clusterrole
   apiGroup: rbac.authorization.k8s.io
