--- a/observability/03-loki/loki-service.yaml
+++ b/observability/03-loki/loki-service.yaml
@@ -5,9 +5,11 @@ metadata:
   namespace: go-service-obs
   labels:
     app: loki
+    version: v1
 spec:
   selector:
     app: loki
+    version: v1
   ports:
   - port: 3100
     targetPort: 3100
