--- a/observability/02-prometheus/prometheus-service.yaml
+++ b/observability/02-prometheus/prometheus-service.yaml
@@ -5,10 +5,12 @@ metadata:
   namespace: go-service-obs
   labels:
     app: prometheus
+    version: v1
 spec:
   selector:
     app: prometheus
+    version: v1
   ports:
   - port: 9090
     targetPort: 9090
-    name: web
+    name: http
