--- a/observability/03-loki/loki-deployment.yaml
+++ b/observability/03-loki/loki-deployment.yaml
@@ -5,15 +5,18 @@ metadata:
   namespace: go-service-obs
   labels:
     app: loki
+    version: v1
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: loki
+      version: v1
   template:
     metadata:
       labels:
         app: loki
+        version: v1
     spec:
       containers:
       - name: loki
