--- a/observability/04-jaeger/jaeger-deployment.yaml
+++ b/observability/04-jaeger/jaeger-deployment.yaml
@@ -5,15 +5,18 @@ metadata:
   namespace: go-service-obs
   labels:
     app: jaeger
+    version: v1
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: jaeger
+      version: v1
   template:
     metadata:
       labels:
         app: jaeger
+        version: v1
     spec:
       containers:
       - name: jaeger
