--- a/observability/01-opentelemetry/otel-collector-config.yaml
+++ b/observability/01-opentelemetry/otel-collector-config.yaml
@@ -66,6 +66,8 @@ data:
         endpoint: jaeger-collector.go-service-obs.svc.cluster.local:4317
         tls:
           insecure: true
+      loki:
+        endpoint: http://loki.go-service-obs.svc.cluster.local:3100/loki/api/v1/push
       logging:
         loglevel: info
 
@@ -87,7 +89,7 @@ data:
         logs:
           receivers: [otlp]
           processors: [memory_limiter, batch, resource]
-          exporters: [logging]
+          exporters: [loki, logging]
       telemetry:
         logs:
           level: "info"
