--- a/otel/03-service.yaml
+++ b/otel/03-service.yaml
@@ -22,5 +22,13 @@ spec:
     port: 8888
     targetPort: 8888
     protocol: TCP
+  - name: http-health
+    port: 13133
+    targetPort: 13133
+    protocol: TCP
+  - name: http-zpages
+    port: 55679
+    targetPort: 55679
+    protocol: TCP
   selector:
     app: otel-collector
